RESOLVED FIXED310577
Cannot move to next item in playlist when in a background tab on music.apple.com
https://bugs.webkit.org/show_bug.cgi?id=310577
Summary Cannot move to next item in playlist when in a background tab on music.apple.com
Jer Noble
Reported 2026-03-23 14:32:03 PDT
Cannot move to next item in playlist when in a background tab on music.apple.com
Attachments
Jer Noble
Comment 1 2026-03-23 14:32:04 PDT
Jer Noble
Comment 2 2026-03-23 14:39:02 PDT
EWS
Comment 3 2026-03-24 17:29:10 PDT
Committed 309879@main (143423245cd9): <https://commits.webkit.org/309879@main> Reviewed commits have been landed. Closing PR #61196 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.